--- a/source/index.html
+++ b/source/index.html
@@ -528,12 +528,9 @@
                     <div class="line-block__item " data-ajax-load-block="HEADER_TOGGLE_CABINET">
                       <div class="header-cabinet">
                         <!--'start_frame_cache_cabinet-link2'-->		<!-- noindex -->
+                        <!--иконка удалена-->
                         <a class="header-cabinet__link fill-theme-hover light-opacity-hover dark_link animate-load" data-event="jqm" title="Войти" data-param-type="auth" data-param-backurl="/?open=y" data-name="auth" href="/cabinet/">
-                          <i class="svg inline  svg-inline-cabinet banner-light-icon-fill menu-light-icon-fill" aria-hidden="true" >
-                            <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                              <path fill-rule="evenodd" clip-rule="evenodd" d="M0 7.00244C0 3.13645 3.13401 0.00244141 7 0.00244141H11C14.866 0.00244141 18 3.13645 18 7.00244V11.0024C18 14.8684 14.866 18.0024 11 18.0024H7C3.13401 18.0024 0 14.8684 0 11.0024V7.00244ZM7 2.00244C4.23858 2.00244 2 4.24102 2 7.00244V11.0024C2 12.2874 2.48473 13.4592 3.28131 14.3449C3.81254 12.8325 5.05024 11.6528 6.59842 11.2015C5.62776 10.4717 5 9.31039 5 8.00244C5 5.7933 6.79086 4.00244 9 4.00244C11.2091 4.00244 13 5.7933 13 8.00244C13 9.31039 12.3722 10.4717 11.4016 11.2015C12.9498 11.6528 14.1875 12.8325 14.7187 14.3449C15.5153 13.4592 16 12.2874 16 11.0024V7.00244C16 4.24102 13.7614 2.00244 11 2.00244H7ZM7 16.0024C6.29934 16.0024 5.63233 15.8583 5.02702 15.5981C5.22447 14.1325 6.48027 13.0024 8 13.0024H10C11.5197 13.0024 12.7755 14.1325 12.973 15.5981C12.3677 15.8583 11.7007 16.0024 11 16.0024H7ZM7 8.00244C7 6.89787 7.89543 6.00244 9 6.00244C10.1046 6.00244 11 6.89787 11 8.00244C11 9.10701 10.1046 10.0024 9 10.0024C7.89543 10.0024 7 9.10701 7 8.00244Z" fill="#888888"/>
-                            </svg>
-                          </i>
+                         Войти
                         </a>
                         <!-- /noindex -->
                         <!--'end_frame_cache_cabinet-link2'-->
@@ -547,7 +544,7 @@
                     </div>
                     <div class="line-block__item " data-ajax-load-block="HEADER_TOGGLE_BUTTON">
                       <div class="header-button">
-                        <div class="btn animate-load btn-default" data-event="jqm" data-param-id="4">Подать заявку</div>
+                        <div class="btn animate-load btn-default" data-event="jqm" data-param-id="4">Регистрация</div>
                       </div>
                     </div>
                     <div class="line-block__item hidden" data-ajax-load-block="HEADER_TOGGLE_MEGA_MENU_RIGHT">
@@ -836,8 +833,8 @@
                         <div  class="swiper-slide main-slider__item box swiper-lazy "
                           style="background-image:url(data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==) !important;"
                           data-slide_index="0"
-                          data-background="/bitrix/img/B879B268-E9BA-429D-801E-42AD335224C9.jpg"
-                          data-lazyload							 data-bg="/bitrix/img/B879B268-E9BA-429D-801E-42AD335224C9.jpg">
+
+                          data-lazyload>
                           <div class=" banners-big__item  banners-big__depend-height banners-big__depend-padding  ">
                             <div id="bx_3054745969_116" class="maxwidth-theme pos-static  ">
                               <div class="banners-big__inner ">
@@ -1033,9 +1030,10 @@
                   </div>
                 </div>
               </div>
-              <h2>C заботой о природе</h2>
               <div class="tizers-list  tizers-list--narrow">
-                <div class="maxwidth-theme ">
+                <!--обернула классом maxwidth-theme, добавила класс TIZERS-BOTTOM -->
+                <div class="maxwidth-theme TIZERS-BOTTOM">
+                  <h2>C заботой о природе</h2>
                   <div class="tizers-list__items-wrapper grid-list grid-list--items-   mobile-scrolled mobile-offset mobile-scrolled--items-2">
                     <div class="tizers-list__item-wrapper  grid-list__item tizers-list__item-wrapper-offset">
                       <div class="tizers-list__item  tizers-list__item--images- tizers-list__item--images-position-" id="bx_651765591_374">
