Добавляет стили и адаптив для блока о природе

--- a/source/index.html
+++ b/source/index.html
@@ -1030,9 +1030,9 @@
                   </div>
                 </div>
               </div>
-              <div class="tizers-list  tizers-list--narrow">
-                <!--обернула классом maxwidth-theme, добавила класс TIZERS-BOTTOM -->
-                <div class="maxwidth-theme TIZERS-BOTTOM">
+              <div class="tizers-list tizers-list--narrow nature">
+                <!-- Поставил класс на самую верхнюю обертку, поменял на привязанное по имени к нашему блоку -->
+                <div class="maxwidth-theme">
                   <h2>C заботой о природе</h2>
                   <div class="tizers-list__items-wrapper grid-list grid-list--items-   mobile-scrolled mobile-offset mobile-scrolled--items-2">
                     <div class="tizers-list__item-wrapper  grid-list__item tizers-list__item-wrapper-offset">
