Добавляет стили для блока благотворительности

--- a/source/index.html
+++ b/source/index.html
@@ -962,6 +962,8 @@
                               Волонтеры KFC x ROSTIC'S помогают приютам для животных, благотворительным фондам, пожилым людям, заботятся о природе и многое другое. Теперь присоединиться к нашему сообществу волонтеров можешь и ты — регистрируйся и выбирай, как помогать в своем городе!
                             </p>
                             <h4>Итоги волонтеров KFC 2021 (РФ, СНГ, CEE):</h4>
+                            <!--добавлена обертка-->
+                            <div class="main-item-container">
                             <div class="main-item">
                               <b>3000</b><br>
                               волонтеров
@@ -979,9 +981,12 @@
                               благотворительных обедов
                             </div>
                             <br>
+                            </div>
                           </div>
+
                           <div class="index-block__btn">
-                            <a href="/#" class="btn btn-transparent-border btn-lg">
+                            <!-- удалила у кнопки классы btn btn-transparent-border btn-lg, добавила button-link -->
+                            <a href="/#" class="button-link">
                             Зарегистрируйся на событие					</a>
                           </div>
                         </div>
@@ -998,7 +1003,12 @@
                     </div>
                   </div>
                 </div>
-              </div>
+                <!-- добавила новую кнопку с модификатором для обертки index-block__btn--subscribe-->
+                <div class="index-block__btn index-block__btn--subscribe">
+                <a href="/#" class="btn btn-default">
+                    Подпишись на рассылку</a>
+                  </div>
+                </div>
               <div class="company-item front_company-template">
                 <div class="company-item__wrapper company-item--IMG_SIDE">
                   <div class="maxwidth-theme">
