Добавляет разметку и стили страницы новостей

--- a/source/index.html
+++ b/source/index.html
@@ -315,7 +315,7 @@
                 <span class="burger-menu__item-delimiter"></span>
               </div>
               <div class="burger-menu__item--large     ">
-                <a class="burger-menu__link--large burger-menu__link--light switcher-title dark_link" href="/news/">
+                <a class="burger-menu__link--large burger-menu__link--light switcher-title dark_link" href="news.html">
                 Новости				</a>
                 <span class="burger-menu__item-delimiter"></span>
               </div>
@@ -472,7 +472,7 @@
                           </a>
                         </div>
                         <div class="header-menu__item unvisible     ">
-                          <a class="header-menu__link light-opacity-hover fill-theme-hover menu-light-text banner-light-text dark_link" href="/news/">
+                          <a class="header-menu__link light-opacity-hover fill-theme-hover menu-light-text banner-light-text dark_link" href="news.html">
                           <span class="header-menu__title">
                           Новости						</span>
                           </a>
