some fancy fixes

--- a/source/index.html
+++ b/source/index.html
@@ -965,22 +965,21 @@
                             <!--добавлена обертка-->
                             <div class="main-item-container">
                             <div class="main-item">
-                              <b>3000</b><br>
+                              <b>3000</b>
                               волонтеров
                             </div>
                             <div class="main-item">
-                              <b>300</b><br>
+                              <b>300</b>
                               добрых проектов
                             </div>
                             <div class="main-item">
-                              <b>10 000</b><br>
+                              <b>10 000</b>
                               благополучателей
                             </div>
                             <div class="main-item">
-                              <b>10 000</b><br>
+                              <b>10 000</b>
                               благотворительных обедов
                             </div>
-                            <br>
                             </div>
                           </div>
 
@@ -1084,6 +1083,11 @@
                         </div>
                       </div>
                     </div>
+                  </div>
+                  <div class="index-block__btn">
+                    <a href="/#" class="button-link button-link--white">
+                      Узнай больше об эко-привычках с KFC
+                    </a>
                   </div>
                 </div>
               </div>
