Начинает стилизацию страницы новостей

--- a/source/news.html
+++ b/source/news.html
@@ -1484,7 +1484,7 @@
         </div>
         <div id="mobilefilter" class="scrollbar-filter"></div>
 
-        <div role="main" class="main banner-auto">
+        <div role="main" class="main banner-auto news">
             <!--title_content-->
 
             <div class="page-top-info">
