Исправляет опечатки в блоке карточек

--- a/source/index.html
+++ b/source/index.html
@@ -860,7 +860,7 @@
           </div>
           <div class="drag-block container MIDDLE_ADV" data-class="middle_adv_drag" data-order="4">
             <div class="index-block index-block--padding-top-80 index-block--padding-bottom-80 " >
-              <div class="banners-img-with-text-list banners-with-text-template curtom-cards">
+              <div class="banners-img-with-text-list banners-with-text-template custom-cards">
                 <div class="maxwidth-theme">
                   <div class="grid-list grid-list--items-2-991 mobile-scrolled mobile-scrolled--items-2 mobile-offset elements-count-3 grid-list--items-3">
                     <div class="banners-img-with-text-list__wrapper grid-list__item">
