Добавляет custom в название блока nature

--- a/source/index.html
+++ b/source/index.html
@@ -1055,7 +1055,7 @@
                     Подпишись на рассылку</a>
                 </div>
               </div>
-              <div class="tizers-list tizers-list--narrow nature">
+              <div class="tizers-list tizers-list--narrow custom-nature">
                 <!-- Поставил класс на самую верхнюю обертку, поменял на привязанное по имени к нашему блоку -->
                 <div class="maxwidth-theme">
                   <h2>C заботой о природе</h2>
