fix some problems with bitrix

--- a/source/index.html
+++ b/source/index.html
@@ -1002,12 +1002,19 @@
                     </div>
                   </div>
                 </div>
-                <!-- добавила новую кнопку с модификатором для обертки index-block__btn--subscribe-->
-                <div class="index-block__btn index-block__btn--subscribe">
-                <a href="/#" class="btn btn-default">
-                    Подпишись на рассылку</a>
+                <div style="
+                  display: flex;
+                  flex-flow: row;
+                  padding-top: 20px;
+                  margin-bottom: -50px;
+                ">
+                  <div class="index-block__btn index-block__btn--subscribe" data-event="jqm" data-param-type="subscribe" data-name="subscribe" style="margin: auto;">
+                    <div class="btn btn-transparent-border btn-lg has-ripple">
+                      Подпишись на рассылку
+                    </div>
                   </div>
                 </div>
+              </div>
               <div class="company-item front_company-template custom-charity">
                 <div class="company-item__wrapper company-item--IMG_SIDE">
                   <div class="maxwidth-theme">
@@ -1048,10 +1055,17 @@
                     </div>
                   </div>
                 </div>
-                <!-- добавила новую кнопку с модификатором для обертки index-block__btn--subscribe-->
-                <div class="index-block__btn index-block__btn--subscribe">
-                  <a href="/#" class="btn btn-default">
-                    Подпишись на рассылку</a>
+                <div style="
+                  display: flex;
+                  flex-flow: row;
+                  padding-top: 20px;
+                  margin-bottom: -50px;
+                ">
+                  <div class="index-block__btn" data-event="jqm" data-param-type="subscribe" data-name="subscribe" style="margin: auto;">
+                    <div class="btn btn-transparent-border btn-lg has-ripple">
+                      Подписаться на рассылку
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="tizers-list tizers-list--narrow custom-nature">
